fix(core): derive AccessibleObject.override offset so JDK 27 compact headers work
JEP 450 compact object headers are default-on in JDK 27, shrinking the object
header from 12 to 8 bytes and moving AccessibleObject.override from offset 12
to 8. Unsafe hard-coded 12/16, so the override write landed inside the header
and setAccessible() silently no-opped -- the FdBig double-formatting bridge
then threw IllegalAccessError on JDK 27 (proven: -XX:-UseCompactObjectHeaders
makes the unchanged jar pass).

AccessibleObject_override_fieldOffset() now measures the first-field boundary
via a one-field probe instead of hard-coding a value; override sits at that
boundary in every layout, so this tracks compact (8), compressed (12),
uncompressed (16) and 32-bit (8) alike. Being in the shared source it also
repairs every other Unsafe.makeAccessible call site under compact headers.

Verified: the JDK 8 MRJAR formats all slow-path doubles on JDK 8/11/17/25/26
and 27-ea in both header modes. The mrjar-smoke 27-ea job is now a green
forward canary. Updates the FdBig note accordingly.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01S8vZt12JbC8o8rGyHYTPrE